--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -1,10 +1,10 @@
-*{
+/*{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
-/* starter CSS */
+/* starter CSS 
 
 body{
     font-family:'Times New Roman', Times, serif;
